# math-lib-calculator

./: .editorconfig  .gitignore  README.md  hodnoceni.txt  skutecnost.txt
plan/: xbohace00_xdusbad00_xkadlep00_plan.txt
profiling/: profiling_report.txt
src/: Doxyfile  Makefile
src/calculator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/calculator/engine/: calculator_engine.cpp  calculator_engine.h  evaluator.cpp  evaluator.h  parser.cpp  parser.h  token.h  tokenizer.cpp  tokenizer.h
src/calculator/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: mainwindow.ui  mathlib.cpp  mathlib.h
src/installer/: Calc.desktop  build_deb.sh  ivs-calculator_1.0_amd64.deb
src/installer/ivs-calculator-deb/DEBIAN/: control
src/profiling/: stddev.cpp
src/test/: math-lib_test.cpp  mathlib_test.cpp  run_tests
